--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@google-cloud/storage": "^6.9.3",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.9.0",
     "@tanstack/react-query": "^4.20.2",
