--- a/package.json
+++ b/package.json
@@ -11,17 +11,31 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^6.9.3",
+    "@headlessui/react": "^1.7.12",
+    "@heroicons/react": "^2.0.16",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.9.0",
     "@tanstack/react-query": "^4.20.2",
+    "@tiptap/extension-bubble-menu": "^2.0.0-beta.220",
+    "@tiptap/extension-code-block-lowlight": "^2.0.0-beta.220",
+    "@tiptap/extension-link": "^2.0.0-beta.220",
+    "@tiptap/pm": "^2.0.0-beta.220",
+    "@tiptap/react": "^2.0.0-beta.220",
+    "@tiptap/starter-kit": "^2.0.0-beta.220",
     "@trpc/client": "^10.9.0",
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "axios": "^1.3.4",
+    "clsx": "^1.2.1",
+    "html-react-parser": "^3.0.9",
+    "lowlight": "^2.8.1",
     "next": "^13.2.1",
     "next-auth": "^4.19.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.3",
+    "react-uuid": "^2.0.0",
     "superjson": "1.9.1",
     "zod": "^3.20.6"
   },
