--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "@types/uuid": "^9.0.1",
     "axios": "^1.3.4",
     "clsx": "^1.2.1",
     "html-react-parser": "^3.0.9",
@@ -37,6 +38,7 @@
     "react-hook-form": "^7.43.3",
     "react-uuid": "^2.0.0",
     "superjson": "1.9.1",
+    "uuid": "^9.0.0",
     "zod": "^3.20.6"
   },
   "devDependencies": {
