--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tiptap/extension-bubble-menu": "^2.0.0-beta.220",
     "@tiptap/extension-code-block-lowlight": "^2.0.0-beta.220",
     "@tiptap/extension-link": "^2.0.0-beta.220",
+    "@tiptap/extension-list-item": "^2.0.0-beta.220",
     "@tiptap/pm": "^2.0.0-beta.220",
     "@tiptap/react": "^2.0.0-beta.220",
     "@tiptap/starter-kit": "^2.0.0-beta.220",
