--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.3",
     "react-uuid": "^2.0.0",
+    "showdown": "^2.1.0",
     "superjson": "1.9.1",
     "uuid": "^9.0.0",
     "zod": "^3.20.6"
@@ -48,6 +49,7 @@
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/showdown": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
     "autoprefixer": "^10.4.7",
